k8s/dev/cm-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cm-cluster-ip-service-dev
  namespace: course-management-dev
spec:
  type: ClusterIP
  selector:
    component: cm-backend
  ports:
    - port: 80
      targetPort: 8080
