k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm-ingress
  namespace: course-management-dev
  annotations:
    cert-manager.io/issuer: letsencrypt-http01-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.cm-yarmoshyk.com
      secretName: dev-cm-yarmoshyk-com-key-pair
  rules:
    - host: dev.cm-yarmoshyk.com
      http:
        paths:
          - backend:
              service:
                name: cm-cluster-ip-service-dev
                port:
                  number: 80
            pathType: Prefix
            path: /
